Moves all Base64 parsing to Java's builtin DatatypeConverter.
Conflicts:
	threadfix-importers/src/main/java/com/denimgroup/threadfix/importer/impl/remoteprovider/ContrastRemoteProvider.java
	threadfix-importers/src/main/java/com/denimgroup/threadfix/importer/impl/remoteprovider/utils/RemoteProviderHttpUtilsImpl.java
	threadfix-main/src/main/java/com/denimgroup/threadfix/service/defects/utils/RestUtilsImpl.java