@@ -26,8 +26,8 @@ package com.denimgroup.threadfix.importer.impl.remoteprovider.utils;
 import org.apache.commons.httpclient.HttpMethodBase;
 import org.apache.commons.httpclient.methods.PostMethod;
 import org.apache.commons.httpclient.methods.RequestEntity;
-import org.eclipse.jgit.util.Base64;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.OutputStream;
 
@@ -103,7 +103,7 @@ public class DefaultRequestConfigurer implements RequestConfigurer {
     public void configure(HttpMethodBase method) {
         if (username != null && password != null) {
             String login = username + ":" + password;
-            String encodedLogin = Base64.encodeBytes(login.getBytes());
+            String encodedLogin = DatatypeConverter.printBase64Binary(login.getBytes());
 
             method.setRequestHeader("Authorization", "Basic " + encodedLogin);
         }
